2009-12-15  Antonello Provenzano  <antonello@deveel.com>
	* TIntervalType.cs: 
		- definition of the type doesn't require the length 
		anymore and accept an SqlType specification
		- CompareTo type refactored to accept comparisons
		only with Interval and for the type given
	* TType.cs: the 'IntervalType' field now is built upon
	a FULL INTERVAL type.
	* SqlType.cs: 
		- removed fields Year, Month, Day, Hour, Minute 
		and Second
		- added fields YearToMonth and DayToSecond
	* TObject.cs: 
		- replaced support for INTERVAL types
		from TimeStamp to Interval
		- 'implicit' operators replaced with 'explicit's
	* ObjectTransfer.cs: 
		- INTERVAL types are now handled by	Interval type
		- changed serialization type of DateTimes
	
2009-12-11  Antonello Provenzano  <antonello@deveel.com>
	* IQueryContext.cs: 
		- introduced reference methods to support cursors 
		management (declaration, opening, closing, dropping)
		- added method DeclareVariable to support the
		declaration of variables within the context
	* Transaction.cs: implements interface ICursorContext to
	generalize disposal of cursros
	* Cursor.cs: replaced reference to Transaction object with
	reference to ICursorContext.
	
2009-12-10  Antonello Provenzano  <antonello@deveel.com>
	* TableDataConglomerate.cs: implemented methods for
	handling temporary tables.
	* Transaction.cs: added support for TEMPORARY tables
	
2009-12-09  Antonello Provenzano  <antonello@deveel.com>
	* DatabaseConnection.cs: callback methods to Transaction
	class for UDTs management.
	
2009-12-06  Antonello Provenzano  <antonello@deveel.com>
	* ObjectTransfer.cs: ReadFrom accepts a TType as argument
	* V2MasterTableDataSource.cs: calls to ObjectTransfer
	now pass also the TType of the column (to support UDTs)
	* SimpleTransaction.cs: the constructor now accepts a 
	UDTManager instance as argument
	
2009-12-03  Antonello Provenzano  <antonello@deveel.com>
	* Cursor.cs: 
		- the boolean flags have been replaced by an instance 